--- a/latex/sections/stablecoin.tex
+++ b/latex/sections/stablecoin.tex
@@ -86,7 +86,7 @@ For stablecoins in this category, the firm operating the currency will obtain a 
 
 This idea predates Bitcoin: Liberty Reserve provided a similar digital currency, with some caveats about its redeemability, not to mention its legality. However Liberty Reserve, e-gold, and similar pre-blockchain services would maintain transaction details and account balances on a private server. Blockchain enables decentralized trust for the transactions, while the coin creation and redemption processes rely on a trustworthy firm. In short, this type of stablecoin is more centralized than Bitcoin but less than Liberty Reserve. For analysis, we need a finer grained approach to trust assumptions which Table~\ref{tab:evframework} tries to capture. Also consider that while decreasing centralization can be good for trust and transparency, additional measures are needed to ensure it is not harmful for privacy.
 
-Recall the mechanism in Table~\ref{tab:mech}. If buyers are willing to pay more than \$1 USD for 1 AliceCoin, new coins can be generated for \$1 USD and sold to these buyers for a profit, ensuring bids return to \$1 USD (it corrects overvaluation). If sellers are willing take less than \$1 USD for 1 AliceCoin, these coins can be bought and redeemed for a profit, ensuring offers return to \$1 USD (it corrects undervaluation). In reality, transactions are not free, efficient, or entirely frictionless and some price deviation is expected. If redemption is ever in doubt, then the price can fall freely from \$1 USD (although this will not necessary happen, see next section). The trustworthiness of the operating firm and the custodian of the reserves is essential, and financial audits are an important step to establishing confidence (although many pitfalls exist when auditing blockchain-based assets~\cite{PBEC19}). 
+Recall the mechanism in Table~\ref{tab:mech}. If buyers are willing to pay more than \$1 USD for 1 AliceCoin, new coins can be generated for \$1 USD and sold to these buyers for a profit, ensuring bids return to \$1 USD (it corrects overvaluation). If sellers are willing to take less than \$1 USD for 1 AliceCoin, these coins can be bought and redeemed for a profit, ensuring offers return to \$1 USD (it corrects undervaluation). In reality, transactions are not free, efficient, or entirely frictionless and some price deviation is expected. If redemption is ever in doubt, then the price can fall freely from \$1 USD (although this will not necessary happen, see next section). The trustworthiness of the operating firm and the custodian of the reserves is essential, and financial audits are an important step to establishing confidence (although many pitfalls exist when auditing blockchain-based assets~\cite{PBEC19}). 
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
@@ -99,7 +99,7 @@ Recall the mechanism in Table~\ref{tab:mech}. Bids (see sidebar on prices) will 
 
 The largest coin is this category is Tether. Tether claims to be redeemable, but the redemption process is reported by users to have a lot of friction, it is accused of issuing coins to manipulate markets~\cite{griffin2018bitcoin}, and it has not always maintained full reserves of USD to allow all Tether to be redeemed (for these reasons, we categorize it here). It is a mystery to most why Tether remains highly liquid with daily trading volumes exceeding all other cryptocurrencies in value (according to \textit{CoinMarketCap} at the time of writing). One explanation is that it is too useful to fail.
 
-A key use-case, illustrated by Tether and the affiliated exchange Bitfinex, is as a temporary store of value for traders and speculators. A trader that wants to divest their BTC for USD has three options. She can (1) hold the USD in her exchange account, which can be used only on the same exchange and requires the exchange to be a trustworthy custodian. She can (2) withdrawal the USD from the exchange but this requires identity verification (in most jurisdictions), a bank that will accept proceeds of cryptocurrency trading, and a substantial time delay. A balanced alternative is to (3) exchange BTC into a stablecoin which can be withdrawn from the exchange (\ie moved from the exchange to Alice's private key) with little friction, delay, and regulatory oversight. The withdrawn stablecoin can be moved onto a different exchange, transferred other other users, or used for direct purchases without involving the original exchange. This enables more flexibility than withdrawing USD. In short, it offers more flexibility than USD left on an exchange account and less friction than withdrawing actual USD.
+A key use-case, illustrated by Tether and the affiliated exchange Bitfinex, is as a temporary store of value for traders and speculators. A trader that wants to divest their BTC for USD has three options. She can (1) hold the USD in her exchange account, which can be used only on the same exchange and requires the exchange to be a trustworthy custodian. She can (2) withdraw the USD from the exchange but this requires identity verification (in most jurisdictions), a bank that will accept proceeds of cryptocurrency trading, and a substantial time delay. A balanced alternative is to (3) exchange BTC into a stablecoin which can be withdrawn from the exchange (\ie moved from the exchange to Alice's private key) with little friction, delay, and regulatory oversight. The withdrawn stablecoin can be moved onto a different exchange, transferred other other users, or used for direct purchases without involving the original exchange. This enables more flexibility than withdrawing USD. In short, it offers more flexibility than USD left on an exchange account and less friction than withdrawing actual USD.
  
 % The idea of tokenizing assets and re-selling them in a useful format (\eg as a portfolio or in a way that is digitally compliant with standard trading software and automated accounting systems) is commonplace for standard financial assets, however most tokenizations of this type have some direct or indirect redeemable value. Consider two contrasting examples: a typical ETF and a typical trust fund. An electronically traded fund (ETF) will typically sell shares of a portfolio of assets, be redeemable for the assets on-demand, and will be priced closely ($\pm 1\%$) to the value of its underlying assets---it is most like the stablecoins in Section~\ref{sec:redeem}. A simplification of a (close-ended) trust fund is as follows: a firm will set up a special corporation to hold the assets, the tokens are not directly redeemable, however the tokens are ownership shares in the special corporation---by owning the corporation, you effectively own its assets. Such a fund will trade with greater deviation from the value of its assets ($\pm 5\%$).
 
@@ -114,7 +114,7 @@ A key use-case, illustrated by Tether and the affiliated exchange Bitfinex, is a
 \subsection{Indirectly-Backed}
 \label{sec:dai}
 
-Both of the previous mechanisms placed heavy trust assumptions on the firm operating the currency. Could a currency be managed autonomously by a DApps? The key idea here is to offer a redeemable token worth, say, \$1 USD. However, it can only be redeemed for a non-stable cryptocurrency like ETH and not USD. But the amount of received ETH will grow or shrink depending on the USD/ETH exchange rate, such that the amount received is worth \$1 USD. Because a blockchain has no inherent knowledge of the USD/ETH exchange rate, this mechanism still requires one trustworthy entity called an oracle to write the exchange rate into the blockchain (or the consensus taken across a set of oracles).
+Both of the previous mechanisms placed heavy trust assumptions on the firm operating the currency. Could a currency be managed autonomously by a DApp? The key idea here is to offer a redeemable token worth, say, \$1 USD. However, it can only be redeemed for a non-stable cryptocurrency like ETH and not USD. But the amount of received ETH will grow or shrink depending on the USD/ETH exchange rate, such that the amount received is worth \$1 USD. Because a blockchain has no inherent knowledge of the USD/ETH exchange rate, this mechanism still requires one trustworthy entity called an oracle to write the exchange rate into the blockchain (or the consensus taken across a set of oracles).
 
 Recall the mechanism in Table~\ref{tab:mech}. Bids for an AliceCoin in excess of \$1 USD will be fulfilled as long as there are individuals like Alice willing to lock up a deposit of ETH that is1.5x the face-value of what they receive (this is called over-collateralization). An AliceCoin offered for less than \$1 USD can be purchased and redeemed for a profit--assuming the DApp holds enough ETH. Otherwise, an AliceCoin will sell between \$0 and \$1 USD according to the value of the ETH held by the DApp. 
 
