--- a/latex/sections/stablecoin.tex
+++ b/latex/sections/stablecoin.tex
@@ -3,7 +3,7 @@
 
 \section{Introduction}\label{sec:Intro}
 
-The first wave of cryptocurrencies, starting in the 1980s, attempted to provide a digitization of government-issued currency (or `fiat currency' as cryptocurrency enthusiasts say)~\cite{NBFMG16}. The second wave, most prominently represented by Bitcoin~\cite{nakamoto2008bitcoin}, provide their own separate currency --- issued and operated independently of any existing currencies, governments, or financial institutions. Bitcoin's currency (BTC) is issued in fixed quantities according to a hardcoded schedule in the protocol. 
+The first wave of cryptocurrencies, starting in the 1980s, attempted to provide a digitization of government-issued currency (or `fiat currency' as cryptocurrency enthusiasts say)~\cite{NBFMG16}. The second wave, represented prominently by Bitcoin~\cite{nakamoto2008bitcoin}, provide their own separate currency --- issued and operated independently of any existing currencies, governments, or financial institutions. Bitcoin's currency (BTC) is issued in fixed quantities according to a hardcoded schedule in the protocol. 
 
 In the words of Bitcoin's pseudonymous inventor, ``\textit{there is nobody to act as a central bank\ldots to adjust the money supply\ldots that would have required a trusted party to determine the value because I don’t know a way for software to know the real world value of things. If there was some clever way, or if we wanted to trust someone to actively manage the money supply to peg it to something, the rules could have been programmed for that. In this sense, it’s more typical of a precious metal. Instead of the supply changing to keep the value the same, the supply is predetermined and the value changes}''~\cite{Cha14}.
 
@@ -17,11 +17,11 @@ In the words of Bitcoin's pseudonymous inventor, ``\textit{there is nobody to ac
 
 Without active management, the exchange rate of BTC with governmental currencies has been marked by extreme volatility (see Figure~\ref{fig:btcandfiat}). Squint at the chart to notice how the GBP drops around June 2016: this mild-looking pinch is actually the  `sharp decline' and `severe swing' that followed the Brexit referendum in the UK. However, it is completely overshadowed when placed beside BTC's large fluctuations.
 
-\paragraph{A third wave?} Extreme volatility is not specific to Bitcoin (BTC), and can also be seen in its contemporaries Ethereum (ETH) and Ripple (XRP). This instability is an issue of practical importance: volatility encourages users to hoard (if it is going up) or avoid (if it is going down) the currency rather than use it. It makes lending risky, as currency movements can exceed interest payments. A lack of lending and credit inhibits the formation of mature financial markets. In response, a flood of proposals have been made for new cryptocurrency designs (called `stablecoins') that purport to provide a stable exchange rate similar to (or exactly mirroring) a government issued currency like the USD.
+\paragraph{A third wave?} Extreme volatility is not specific to Bitcoin (BTC), and can also be seen in its contemporaries Ethereum (ETH) and Ripple (XRP). This instability is an issue of practical importance: volatility encourages users to hoard (if it is going up) or avoid (if it is going down) the currency rather than use it. It makes lending risky, as currency movements can exceed interest payments. A lack of lending and credit inhibits the formation of mature financial markets. In response, a flood of proposals have been made for new cryptocurrency designs that purport to provide a stable exchange rate similar to (or exactly mirroring) a government-issued currency like the USD. These designs are called stablecoins.
 
-Stablecoins have garnered a lot of attention recently, both positive and negative. According to CoinMarketCap, more value in Tether changes hands across a given day than Bitcoin. This despite questions about Tether's reserves and regulatory investigations into its affiliates. The announcement of Facebook's Libra made international headlines and has been remarked on by the Fed, US legislators, and the even the sitting President. Another project, Basis (\nee Basecoin) raised \$133M in Venture Capital but folded up when it could not find a tenable path through US financial regulations. Central banks, including those of Sweden and Denmark, have explored the idea of government-issued stable cryptocurrencies.
+Stablecoins have garnered a lot of attention recently, both positive and negative. According to \textit{CoinMarketCap}, more value in Tether changes hands across a given day than Bitcoin. This despite questions about Tether's reserves and regulatory investigations into its affiliates. The announcement of Facebook's Libra made international headlines and has been remarked on by the Fed, US legislators, and the even the sitting President. Another project, Basis (\nee Basecoin) raised \$133M in Venture Capital but folded up when it could not find a tenable path through US financial regulations. Central banks, including those of Sweden and Denmark, have explored the idea of government-issued stable cryptocurrencies.
 
-\paragraph{Knowledge gap.} Understanding how stablecoins work should be easy when they are marketed to the public. Most firms/projects have a whitepaper outlining the design, and there is no shortage of online articles surveying various designs. Unfortunately there are a number of pitfalls in systemizing this knowledge. Many whitepapers are obfuscated with jargon---terms left undefined and/or used inconsistently with other projects and with the financial literature. In other cases, system components appear mislabled. For example, a component that cleanly meets the definition of a security or a derivative might be instead labeled a bond or a loan. Maybe this is a lack of precision, or maybe it is a play to make an unconventional protocol appear more conventional? Or maybe they are unconscious attempts at keeping any regulatory red flags at half mast? In any case, we made a concentrated effort to offer direct and simple explanations (see Table~\ref{tab:mech}). In parallel to our work, other academics have produced their own taxonomies~\cite{PHP+19,MSS20}.
+\paragraph{Knowledge gap.} Understanding how stablecoins work should be easy. Most firms/projects have a whitepaper outlining the design, the coins are marketed to the general public, and there is no shortage of online articles surveying various designs. Unfortunately there are a number of pitfalls in systemizing this knowledge. Many whitepapers are obfuscated with jargon---terms left undefined and/or used inconsistently with other projects and with the financial literature. In other cases, system components appear to be mislabled. For example, a component that cleanly meets the definition of a security or a derivative might instead be labeled a bond or a loan. Maybe this is a lack of precision, or maybe it is a play to make an unconventional protocol appear more conventional? Or maybe they are unconscious attempts at keeping any regulatory red flags at half mast? In any case, we made a concentrated effort to offer direct and simple explanations (see Table~\ref{tab:mech}). In parallel to our work, other academics have produced their own taxonomies~\cite{PHP+19,MSS20}.
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = 	
 	
@@ -29,7 +29,7 @@ Stablecoins have garnered a lot of attention recently, both positive and negativ
 \begin{framed}
 Sidebar
 \begin{flushleft}
-\textbf{Prices.} A cryptocurrency (or any asset) has two prices: (1) the most someone is willing to pay and (2) the least someone is willing to sell for. These are referred to as the best bid price and best ask (or offer) price respectively. Note that the best bid price should logically be less than the best ask price, otherwise an exchange would happen (such prices might occasionally `cross' but this should be temporal and quickly resolved with an exchange). Say a stablecoin is designed to ensure one unit is always priced at \$1 USD. To argue stability, one must show both that (1) the bid price should never exceed \$1 dollar and (2) the offer price should never dip below \$1 USD. Note, conversely, that bids can dip below \$1 USD (everyone prefers to pay less than something is worth) and asks can exceed \$1 USD (everyone prefers to receive more than something is worth).
+\textbf{Prices.} A cryptocurrency (like any asset) has two prices: (1) the most someone is willing to pay and (2) the least someone is willing to sell for. These are referred to as the best bid price and best offer (or ask) price respectively. Note that the best bid price should logically be less than the best offer price, otherwise an exchange would happen (such prices might occasionally `cross' but this should be temporal and quickly resolved with an exchange). Say a stablecoin is designed to ensure one unit is always priced at \$1 USD. To argue stability, one must show both that (1) the bid price should never exceed \$1 USD and (2) the offer price should never dip below \$1 USD. Note, conversely, that bids can dip below \$1 USD (everyone prefers to pay less than something is worth) and asks can exceed \$1 USD (everyone prefers to receive more than something is worth).
 \end{flushleft}
 \end{framed}
 \end{Sidebar*}
@@ -41,7 +41,7 @@ Sidebar
 \begin{framed}
 Sidebar
 \begin{flushleft}
-\textbf{Bitcoin \& Blockchain Primer.} A blockchain is a type of distributed database (or ledger) that is open to anyone who wants to maintain it, robust against faulty and malicious participants, and runs without anyone in charge. When a participant looks at her local copy of the ledger, she is assured that (1) everyone has the exact same records and (2) each record was validated by the majority of participants before it was written into the ledger. Bitcoin is a digital currency that introduced the idea of a blockchain to track how much BTC is held by each account, and to write `smart' transactions for BTC payments. Transactions are added to the blockchain in a batch (called a block) by a network participant (called a miner) and miners include a special transaction that pays themselves newly minted BTC (called a coinbase transaction). The amount of new BTC released to miners follows a schedule built into the protocol and will decrement over time, eventually reaching zero once a determined amount of BTC has been made available. 
+\textbf{Bitcoin \& Blockchain Primer.} A public blockchain is a type of distributed database (or ledger) that is open to anyone who wants to maintain it, robust against faulty and malicious participants, and runs without anyone in charge. When a participant looks at her local copy of the ledger, she is assured that (1) everyone has the exact same records and (2) each record was validated by the majority of participants before it was written into the ledger. Bitcoin is a digital currency that introduced the idea of a blockchain to track how much BTC is held by each account, and to write `smart' transactions for BTC payments. Transactions are added to the blockchain in a batch (called a block) by a network participant (called a miner) and miners include a special transaction that pays themselves newly minted BTC (called a coinbase transaction). The amount of new BTC released to miners follows a schedule built into the protocol and will decrement over time, eventually reaching zero once a determined amount of BTC has been made available. 
 \end{flushleft}
 \end{framed}
 \end{Sidebar*}
@@ -52,7 +52,7 @@ Sidebar
 \begin{framed}
 Sidebar
 \begin{flushleft}
-\textbf{Ethereum \& DApp Primer.} Ethereum is a blockchain protocol with a BTC-esque cryptocurrency called Ether (ETH). To a degree much greater than Bitcoin, Ethereum allows users to code verbose `smart contracts' or `decentralized apps (DApps)' that can be stored on the blockchain (for a fee). Once stored, users can run functions (again, for a fee) defined in the DApp. The functions are executed by the miners and the output is written to the blockchain. Among other things, DApps can hold ETH and write functions that define how the ETH will be transferred from the DApp. DApps can also create their own currencies and circulate them as tokens. ERC20 tokens are compliant with a highly used standard and can interoperate with existing wallet software, web-based exchanges, and token-tracking websites.
+\textbf{Ethereum \& DApp Primer.} Ethereum is a blockchain protocol with a BTC-esque cryptocurrency called Ether (ETH). To a degree much greater than Bitcoin, Ethereum allows users to code verbose `smart contracts' or `decentralized apps (DApps)' that can be stored on the blockchain (for a fee). Once a DApp is deployed, users can run its functions (again, for a fee). The functions are executed by the miners and the output is written to the blockchain. Among other things, DApps can hold ETH and write functions that define how the ETH will be transferred from the DApp. DApps can also create their own currencies and circulate them as tokens. ERC20 tokens are compliant with a widely used Ethereum standard and can interoperate with existing wallet software, web-based exchanges, and token-tracking websites.
 \end{flushleft}
 \end{framed}
 \end{Sidebar*}
@@ -64,7 +64,7 @@ Sidebar
 
 We started by finding stablecoin projects on \textit{CoinDesk}, an online news source for cryptocurrencies, using search queries like ``stablecoins,'' ``stability,'' and ``price-stable.'' We read 185 articles up to January 11, 2019.\footnote{Given its high profile, we also include Facebook's Libra Coin which was released after this date.} For the 25 projects for which we could find sufficient documentation, we classified them in Table~\ref{tab:stablecoins}. This classification is done according to what the projects assert they do---we provide no warranty of what the projects do in reality. We sort projects according to their rank on \textit{CoinMarketCap} which ranks cryptocurrencies that are actively traded on an exchange service. Unlisted projects are ranked $\perp$.
 
-Next, we distilled each proposal into their core stability mechanism. Instead of enumerating the intricate details of how each `brand' of stablecoin works---details that could change tomorrow---we concentrate on communicating the fundamentals. Broadly, the proposals can be split into two categories: (1) ones that try to directly match the stability of a second asset, such as the USD, and could not exist without this underlying asset, and (2) ones that propose independent currencies with algorithmic and/or human intervention mechanisms for providing stability. Fuller detail is provided in Table~\ref{tab:mech}.
+Next, we distilled each proposal into a core stability mechanism. Instead of enumerating the intricate details of how each `brand' of stablecoin works---details that could change tomorrow---we concentrate on communicating the fundamentals. Broadly, the proposals can be split into two categories: (1) ones that try to directly match the stability of a second asset, such as the USD, and could not exist without this underlying asset, and (2) ones that propose independent currencies with algorithmic and/or human intervention mechanisms for providing stability. Fuller detail is provided in Table~\ref{tab:mech}.
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
@@ -82,11 +82,11 @@ Next, we distilled each proposal into their core stability mechanism. Instead of
 \subsection{Directly-Backed and Redeemable}
 \label{sec:redeem}
 
-For stablecoins in this category, the firm operating the currency will obtain a reserve of some valuable asset---it might be USD or another fiat currency; gold or another commodity; or a basket of multiple assets.  It will then issue digital tokens that represent a unit of the underlying asset (to illustrate, assume a token is redeemable for 1 USD) which can be exchanged online.
+For stablecoins in this category, the firm operating the currency will obtain a reserve of some valuable asset---it might be USD or another sovereign currency, gold or another commodity, or a basket of multiple assets.  It will then issue digital tokens that represent a unit of the underlying asset (to illustrate, assume a token is redeemable for 1 USD) which can be exchanged online.
 
-This idea predates Bitcoin: Liberty Reserve provided a similar digital currency, with some caveats about its redeemability, not to mention its legality. However Liberty Reserve, e-gold, and similar pre-blockchain services would maintain transaction details and account balances on a private server. Blockchain enables decentralized trust for the transactions, while the coin creation and redemption processes rely on a trustworthy firm. In short, this type of stablecoin is more centralized than Bitcoin but less than Liberty Reserve. For analysis, we need a finer grained approach to trust assumptions which Table~\ref{tab:evframework} tries to capture. Also consider that while decreasing centralization can be good for trust and transparency, additional measures are needed to ensure it is not harmful for privacy.
+This idea predates Bitcoin: Liberty Reserve provided a similar digital currency, with some caveats about its redeemability (not to mention its legality). However Liberty Reserve, e-gold, and similar pre-blockchain services would maintain transaction details and account balances on a private server. Blockchain enables decentralized trust for the transactions, while the coin creation and redemption processes rely on a trustworthy firm. In short, this type of stablecoin is more centralized than Bitcoin but less than Liberty Reserve. For analysis, we need a finer grained approach to trust assumptions which Table~\ref{tab:evframework} tries to capture. Also consider that while decreasing centralization can be good for trust and transparency, additional measures are needed to ensure it is not harmful for privacy.
 
-Recall the mechanism in Table~\ref{tab:mech}. If buyers are willing to pay more than \$1 USD for 1 AliceCoin, new coins can be generated for \$1 USD and sold to these buyers for a profit, ensuring bids return to \$1 USD (it corrects overvaluation). If sellers are willing to take less than \$1 USD for 1 AliceCoin, these coins can be bought and redeemed for a profit, ensuring offers return to \$1 USD (it corrects undervaluation). In reality, transactions are not free, efficient, or entirely frictionless and some price deviation is expected. If redemption is ever in doubt, then the price can fall freely from \$1 USD (although this will not necessary happen, see next section). The trustworthiness of the operating firm and the custodian of the reserves is essential, and financial audits are an important step to establishing confidence (although many pitfalls exist when auditing blockchain-based assets~\cite{PBEC19}). 
+Recall the mechanism for issuing AliceCoins in Table~\ref{tab:mech}. If buyers are willing to pay more than \$1 USD for 1 AliceCoin, new coins can be generated for \$1 USD and sold to these buyers for a profit, ensuring bids return to \$1 USD (it corrects overvaluation). If sellers are willing to take less than \$1 USD for 1 AliceCoin, these coins can be bought and redeemed for a profit, ensuring offers return to \$1 USD (it corrects undervaluation). In reality, transactions are not free, efficient, or entirely frictionless and some price deviation is expected. If redemption is ever in doubt, then the price can fall freely from \$1 USD (although this will not necessary happen, see next section). The trustworthiness of the operating firm and the custodian of the reserves is essential, and financial audits are an important step to establishing confidence (although many pitfalls exist when auditing blockchain-based assets~\cite{PBEC19}). 
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
@@ -95,11 +95,11 @@ Recall the mechanism in Table~\ref{tab:mech}. If buyers are willing to pay more 
 
 What if a stablecoin operated exactly as in the previous section but did not offer a redemption process for the coin's underlying assets? If we could not find a clear assertion of redemption, we listed the project under this category in Table~\ref{tab:stablecoins}.
 
-Recall the mechanism in Table~\ref{tab:mech}. Bids (see sidebar on prices) will not exceed \$1 for the same reason as the previous section. However there is no longer a way to profit if offers vary between \$0 USD to \$1 USD (\ie the mechanism does not prevent undervaluation). Generally coins in this category are in fact `redeemable' by one user: the firm operating the coin. It could purchase undervalued coins to release \$1 USD from its reserves. For this reason, stablecoins in this category are scrutinized (to the extent made possible by the firm) to ensure reserves are intact. If every AliceCoin was not backed by \$1 USD, Alice could overissue AliceCoins to enrich herself.
+Recall the mechanism in Table~\ref{tab:mech}. Bids will not exceed \$1 for the same reason as the previous section. However there is no longer a way to profit if offers vary between \$0 USD to \$1 USD (\ie the mechanism does not prevent undervaluation). Generally coins in this category are in fact `redeemable' by one user: the firm operating the coin. It could purchase undervalued coins to release \$1 USD from its reserves. For this reason, stablecoins in this category are scrutinized (to the extent made possible by the firm) to ensure reserves are intact. If every AliceCoin was not backed by \$1 USD, Alice could overissue AliceCoins to enrich herself.
 
-The largest coin is this category is Tether. Tether claims to be redeemable, but the redemption process is reported by users to have a lot of friction, it is accused of issuing coins to manipulate markets~\cite{griffin2018bitcoin}, and it has not always maintained full reserves of USD to allow all Tether to be redeemed (for these reasons, we categorize it here). It is a mystery to most why Tether remains highly liquid with daily trading volumes exceeding all other cryptocurrencies in value (according to \textit{CoinMarketCap} at the time of writing). One explanation is that it is too useful to fail.
+The largest coin is this category is Tether. Tether claims to be redeemable, but the redemption process is reported by users to have a lot of friction, it is accused of issuing coins to manipulate markets~\cite{griffin2018bitcoin}, and it has not always maintained full reserves of USD to allow all Tether to be redeemed (for these reasons, we categorize it here). To many, it is a mystery why Tether remains highly liquid with daily trading volumes exceeding all other cryptocurrencies in value (according to \textit{CoinMarketCap} at the time of writing). One explanation is that it is too useful to fail.
 
-A key use-case, illustrated by Tether and the affiliated exchange Bitfinex, is as a temporary store of value for traders and speculators. A trader that wants to divest their BTC for USD has three options. She can (1) hold the USD in her exchange account, which can be used only on the same exchange and requires the exchange to be a trustworthy custodian. She can (2) withdraw the USD from the exchange but this requires identity verification (in most jurisdictions), a bank that will accept proceeds of cryptocurrency trading, and a substantial time delay. A balanced alternative is to (3) exchange BTC into a stablecoin which can be withdrawn from the exchange (\ie moved from the exchange to Alice's private key) with little friction, delay, and regulatory oversight. The withdrawn stablecoin can be moved onto a different exchange, transferred other other users, or used for direct purchases without involving the original exchange. This enables more flexibility than withdrawing USD. In short, it offers more flexibility than USD left on an exchange account and less friction than withdrawing actual USD.
+A key use-case, illustrated by Tether and the affiliated exchange Bitfinex, is as a temporary store of value for traders and speculators. A trader that wants to divest their BTC for USD has three options. She can (1) hold the USD in her exchange account, which can be used only on the same exchange and requires the exchange to be a trustworthy custodian. She can (2) withdraw the USD from the exchange but this requires identity verification (in most jurisdictions), a bank that will accept proceeds of cryptocurrency trading, and a substantial time delay. A balanced alternative is to (3) exchange BTC into a stablecoin which can be withdrawn from the exchange (\ie moved from the exchange to Alice's private key) with little friction, delay, or regulatory oversight. The withdrawn stablecoin can be moved onto a different exchange, transferred to other users, or used for direct purchases without involving the original exchange. In short, it offers more flexibility than leaving USD in an exchange account and less friction than withdrawing USD.
  
 % The idea of tokenizing assets and re-selling them in a useful format (\eg as a portfolio or in a way that is digitally compliant with standard trading software and automated accounting systems) is commonplace for standard financial assets, however most tokenizations of this type have some direct or indirect redeemable value. Consider two contrasting examples: a typical ETF and a typical trust fund. An electronically traded fund (ETF) will typically sell shares of a portfolio of assets, be redeemable for the assets on-demand, and will be priced closely ($\pm 1\%$) to the value of its underlying assets---it is most like the stablecoins in Section~\ref{sec:redeem}. A simplification of a (close-ended) trust fund is as follows: a firm will set up a special corporation to hold the assets, the tokens are not directly redeemable, however the tokens are ownership shares in the special corporation---by owning the corporation, you effectively own its assets. Such a fund will trade with greater deviation from the value of its assets ($\pm 5\%$).
 
@@ -114,11 +114,11 @@ A key use-case, illustrated by Tether and the affiliated exchange Bitfinex, is a
 \subsection{Indirectly-Backed}
 \label{sec:dai}
 
-Both of the previous mechanisms placed heavy trust assumptions on the firm operating the currency. Could a currency be managed autonomously by a DApp? The key idea here is to offer a redeemable token worth, say, \$1 USD. However, it can only be redeemed for a non-stable cryptocurrency like ETH and not USD. But the amount of received ETH will grow or shrink depending on the USD/ETH exchange rate, such that the amount received is worth \$1 USD. Because a blockchain has no inherent knowledge of the USD/ETH exchange rate, this mechanism still requires one trustworthy entity called an oracle to write the exchange rate into the blockchain (or the consensus taken across a set of oracles).
+Both of the previous mechanisms placed heavy trust assumptions on the firm operating the currency. Could a currency be managed autonomously by a DApp? The key idea of this mechanism is to offer a redeemable token that can be converted into \$1 USD worth of ETH at the going USD/ETH exchange rate. Therefore the amount of ETH received ETH will grow or shrink depending on the exchange rate. Because a blockchain has no inherent knowledge of exchange rates, this mechanism still requires one trustworthy entity called an oracle to write the exchange rate into the blockchain (or consensus can be taken across a set of oracles).
 
-Recall the mechanism in Table~\ref{tab:mech}. Bids for an AliceCoin in excess of \$1 USD will be fulfilled as long as there are individuals like Alice willing to lock up a deposit of ETH that is1.5x the face-value of what they receive (this is called over-collateralization). An AliceCoin offered for less than \$1 USD can be purchased and redeemed for a profit--assuming the DApp holds enough ETH. Otherwise, an AliceCoin will sell between \$0 and \$1 USD according to the value of the ETH held by the DApp. 
+Recall the mechanism in Table~\ref{tab:mech}. Bids for an AliceCoin in excess of \$1 USD will be fulfilled as long as there are individuals like Alice willing to lock up a deposit of ETH that is $1.5\times$ the face-value of what they receive (this is called over-collateralization). An AliceCoin offered for less than \$1 USD can be purchased and redeemed for a profit--assuming the DApp holds enough ETH. Otherwise, an AliceCoin will sell between \$0 and \$1 USD according to the value of the ETH held by the DApp. 
 
-Is it risky for Alice to offer such an AliceCoin? Holding the second place in line is more volatile than holding ETH itself---this stability mechanism does not (and cannot) eliminate volatility, it simply pushes it from the first place to the second place in line. However the second place in line is never more than \$1 USD short of the full amount of ETH held in the DApp. So if Alice keeps the \$1 USD she received for the AliceCoin and keeps the second place in line, she has no more risk than holding ETH. The second place in line can also be sold to someone who is seeking risk: holding it alone is a leveraged bet that ETH rises in value. Is it risky for Bob? In most conditions, holding an AliceCoin is purposefully the same as holding USD. However if the USD/ETH rate deteriorates quickly, the AliceCoin will use up its buffer and start to lose value as well (at the same rate as ETH).
+Is it risky for Alice to offer such an AliceCoin? Holding the second place in line is more volatile than holding ETH itself---this stability mechanism does not (and cannot) eliminate volatility, it simply pushes it from the first place to the second place in line. However the second place in line is never more than \$1 USD short of the full amount of ETH held in the DApp. So if Alice keeps the \$1 USD she received for the AliceCoin, it offsets any losses from the second place in line. She has no more risk than holding ETH. The second place in line can also be sold to someone who is seeking risk: the token is a leveraged bet that ETH rises in value. Is it risky for Bob? In most conditions, holding an AliceCoin is purposefully the same as holding USD. However if the USD/ETH rate deteriorates quickly, the AliceCoin will use up its buffer and start to lose value (at the same rate as ETH).
 
 Here are just a few of the design decisions to consider when deploying an indirectly-backed stablecoin: what should the overcollateralization ratio be (\eg 1.5x)? When can an AliceCoin be redeemed (\eg on-demand, after an elapsed time, after movements in USD/ETH, \etc)? How do you issue multiple AliceCoins (\eg collateral for each coin is held separately, or collateral for all coins are pooled together and coins are interchangeable)?
 
@@ -154,11 +154,11 @@ Here are just a few of the design decisions to consider when deploying an indire
 
 A trusted oracle provides the going exchange rate between the cryptocurrency and a stable-valued asset, such as the USD. When the cryptocurrency gains value, the supply of the cryptocurrency is increased, and when it loses value, the supply is decreased. This mechanism is based on how central banks have historically controlled their economies, however the specifics of exchange rate targetting have been abandoned by modern central banks after past failures. That said, exchange rates are an illustrative example and other financial indicators could be used: oracle-provided interest rates (should lending markets emerge) or purchasing power; on-blockchain metrics like transaction volumes (should these prove robust against manipulation), or human discretion (such as central banks themselves~\cite{danezis2015centrally}).
 
-Allowing a crypto-currency to expand is not difficult. Who receives the new currency is a design decision: (1) existing holders of the currency in proportion to their holdings, (2) existing holders through a random lottery, (3) miners, or (4) a specific entity like a central bank. Who loses when the currency contracts is the primary challenge.
+Allowing a crypto-currency to expand is not difficult. Who receives the new currency is a design decision with options including: (1) existing holders of the currency in proportion to their holdings, (2) existing holders through a random lottery, (3) miners, or (4) a specific entity like a central bank. Who loses when the currency contracts is the primary challenge.
 
-The mechanism in Table~\ref{tab:mech} gives one illustration. Here if many bids for AliceCoin exceed \$1.02 USD, some of the newly injected currency could be spent on obtaining USD until all buyers willing to pay more than \$1.02 USD have purchased AliceCoins. This is merely a heuristically argument because there is no guarantee the recipients will spend the new currency (or spend it on USD, in particular if demand for USD is falling). The justification for offers below \$0.98 is symmetric: the currency contractions could make holders less willing to spend it on USD. However if the price drop is caused by a lack of demand for AliceCoins rather than an oversupply, then removing supply will only thin out the market but not actually incentivize traders to trade and correct the undervaluation.
+The mechanism in Table~\ref{tab:mech} gives one illustration. Here if many bids for AliceCoin exceed \$1.02 USD, some of the newly injected currency could be spent on obtaining USD until all buyers willing to pay more than \$1.02 USD have purchased AliceCoins. This is merely a heuristical argument because there is no guarantee the recipients will spend the new currency on USD, especially if demand for USD is falling. The justification for offers below \$0.98 is symmetric: the currency contractions could make holders less willing to spend it on USD. However if the price drop is caused by a lack of demand for AliceCoins rather than an oversupply, then removing supply will only thin out the market but not actually incentivize traders to trade and correct the undervaluation.
 
-When the coinbase is increased or decreased dynamically (sometimes called an elastic coinbase), increases can be by any amount but decreases cannot appear to go past zero. When the coinbase is exactly zero, miners are still incentivized to mine because of the fees provided in the transactions. In fact this is how Bitcoin will eventually (projected to happen in 2140) function once all BTC is created (how well it will work is debatable~\cite{carlsten2016instability}). Could the coinbase go negative? Since miners are rewarded the sum of the coinbase and the transaction fees, a coinbase can indeed be moderately negative if the transaction fees are greater than the negative coinbase. Under this deployment, the users are effectively burning their transaction fees to contract the money supply.
+When the coinbase is increased or decreased dynamically (called an elastic coinbase), increases can be by any amount but decreases cannot appear to go past zero. When the coinbase is exactly zero, miners are still incentivized to mine because of the fees provided in the transactions. In fact this is how Bitcoin will eventually (projected to happen in 2140) function once all BTC is created (how well it will work is debatable~\cite{carlsten2016instability}). Could the coinbase go negative? Since miners are rewarded the sum of the coinbase and the transaction fees, a coinbase can indeed be moderately negative if the transaction fees are greater than the negative coinbase. Under this deployment, the users are effectively burning their transaction fees to contract the money supply.
 
 
 \subsection{Asset Transfer}
@@ -186,11 +186,11 @@ The second subtype of intervention-based stability mechanism expands and contrac
 
 A more detailed version of this article is available as a whitepaper~\cite{CDM19}. It includes more detail about each coin, some empirical studies of how stable these coins are (see Figure~\ref{fig:vol} for a preview), and an evaluation of whether of Ethereum's mechanism for paying for computation (gas) is stable or not (the answer: it does not seem to be, for now).
 
-In short, stablecoins either bring a low volatility coin onto the blockchain or they play one of two tricks. The first trick is to expand and contract the amount of currency to bring a stable value. The second trick is to turn two high volatility coins (\eg of the underlying cryptocurrency) into one stablecoin and one extremely volatile coin. This last trick is similar to other financial assets which do not reduce overall risk, but instead push it from one tranche of the asset to another.
+In short, stablecoins might tokenize a low volatility coin and bring it onto the blockchain. Or they generally play one of two tricks. The first trick is to expand and contract the amount of currency to stabilize the value. The second trick is to turn two high volatility coins (\eg of the underlying cryptocurrency) into one stablecoin and one extremely volatile coin. This last trick is similar to other financial assets which do not reduce overall risk, but instead push it from one tranche of the asset to another.
 
 Why are there so many projects? The differentiation between coins is along a few parameters: (1) the type of asset that can be redeemed for the coin: USD, EUR, gold, \etc; (2) the underlying blockchain (\eg Bitcoin, Ethereum, \etc) and the low-level technical design (updatable contracts, governance, \etc); and (3) the country it operates from which determines the degree of regulatory compliance that's required. 
 
-What's next? Self-sovereign stablecoins are interesting and probably here to stay, however they face numerous regulatory hurdles from banking, financial tracking, and (likely) securities laws. For stablecoins backed by a governmental currency, where trusting the underlying currency is acceptable to the users, the ultimate expression would be a centrally banked digital currency (CBDC). Since paper currency has been in steady decline (and disproportionately for legitimate transactions~\cite{rogoff2017curse}), a CBDC could reintroduce cash with technological advantages and efficient settlement while minimizing user fees.
+What's next? Self-sovereign stablecoins are interesting and probably here to stay, however they face numerous regulatory hurdles from banking, financial tracking, and (likely) securities laws. For stablecoins backed by a governmental currency, the ultimate expression would be a centrally banked digital currency (CBDC). Since paper currency has been in steady decline (and disproportionately for legitimate transactions~\cite{rogoff2017curse}), a CBDC could reintroduce cash with technological advantages and efficient settlement while minimizing user fees.
 
 \begin{acks}
 
