--- a/latex/main.tex
+++ b/latex/main.tex
@@ -58,6 +58,23 @@ https://queue.acm.org/detail.cfm?id=3305265
 \end{framed}
 \end{Sidebar*}
 
+\begin{Sidebar*}[h!]
+\begin{framed}
+\begin{flushleft}
+\textbf{Authors.} \newline
+
+\textbf{Jeremy Clark} is an associate professor at the Concordia Institute for Information Systems Engineering in Montreal, Canada, where he holds the NSERC/RCGT/Catallaxy Industrial Research Chair in Blockchain Technologies. He collaborates regularly with government agencies on voting and blockchain technologies. \newline
+
+\textbf{Didem Demirag} is a PhD student at the Concordia Institute for Information Systems Engineering in Montreal. \ldots \newline
+
+\textbf{Seyedehmahsa Moosavi} is a PhD student at the Concordia Institute for Information Systems Engineering in Montreal. \ldots \newline
+
+\end{flushleft}
+\end{framed}
+\end{Sidebar*}
+
+
+
 %==========================================%
 
 \end{document}
