Bio added + minor edit

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -21,7 +21,7 @@
 \author{Seyedehmahsa Moosavi}
 \affiliation{\institution{Concordia University}}
 
-\begin{abstract} Stablecoins promise the functionality of Bitcoin without the rollercoaster ride of it's exchange rate. But can this new breed of cryptocurrency really outsmart decades of central bank policy with algorithms and smart contracts?\end{abstract}
+\begin{abstract} Stablecoins promise the functionality of Bitcoin without the rollercoaster ride of its exchange rate. But can this new breed of cryptocurrency really outsmart decades of central bank policy with algorithms and smart contracts?\end{abstract}
 
 \maketitle
 
@@ -67,7 +67,7 @@ https://queue.acm.org/detail.cfm?id=3305265
 
 \textbf{Didem Demirag} is a PhD student at the Concordia Institute for Information Systems Engineering in Montreal. \ldots \newline
 
-\textbf{Seyedehmahsa Moosavi} is a PhD student at the Concordia Institute for Information Systems Engineering in Montreal. \ldots \newline
+\textbf{Seyedehmahsa Moosavi} is a Ph.D. student at the Concordia Institute for Information Systems Engineering in Montreal, Canada. She previously worked as a research intern at the Autorité des Marchés Financiers, Québec, and now focuses on understanding the future of financial technologies (FinTech) using blockchains. \newline
 
 \end{flushleft}
 \end{framed}
