Another minor edit

--- a/latex/sections/stablecoin.tex
+++ b/latex/sections/stablecoin.tex
@@ -21,7 +21,7 @@ Without active management, the exchange rate of BTC with governmental currencies
 
 Stablecoins have garnered a lot of attention recently, both positive and negative. According to \textit{CoinMarketCap}, more value in Tether changes hands across a given day than Bitcoin. This despite questions about Tether's reserves and regulatory investigations into its affiliates. The announcement of Facebook's Libra made international headlines and has been remarked on by the Fed, US legislators, and the even the sitting President. Another project, Basis (\nee Basecoin) raised \$133M in Venture Capital but folded up when it could not find a tenable path through US financial regulations. Central banks, including those of Sweden and Denmark, have explored the idea of government-issued stable cryptocurrencies.
 
-\paragraph{Knowledge gap.} Understanding how stablecoins work should be easy. Most firms/projects have a whitepaper outlining the design, the coins are marketed to the general public, and there is no shortage of online articles surveying various designs. Unfortunately there are a number of pitfalls in systemizing this knowledge. Many whitepapers are obfuscated with jargon---terms left undefined and/or used inconsistently with other projects and with the financial literature. In other cases, system components appear to be mislabled. For example, a component that cleanly meets the definition of a security or a derivative might instead be labeled a bond or a loan. Maybe this is a lack of precision, or maybe it is a play to make an unconventional protocol appear more conventional? Or maybe they are unconscious attempts at keeping any regulatory red flags at half mast? In any case, we made a concentrated effort to offer direct and simple explanations (see Table~\ref{tab:mech}). In parallel to our work, other academics have produced their own taxonomies~\cite{PHP+19,MSS20}.
+\paragraph{Knowledge gap.} Understanding how stablecoins work should be easy. Most firms/projects have a whitepaper outlining the design, the coins are marketed to the general public, and there is no shortage of online articles surveying various designs. Unfortunately there are a number of pitfalls in systemizing this knowledge. Many whitepapers are obfuscated with jargon---terms left undefined and/or used inconsistently with other projects and with the financial literature. In other cases, system components appear to be mislabeled. For example, a component that cleanly meets the definition of a security or a derivative might instead be labeled a bond or a loan. Maybe this is a lack of precision, or maybe it is a play to make an unconventional protocol appear more conventional? Or maybe they are unconscious attempts at keeping any regulatory red flags at half mast? In any case, we made a concentrated effort to offer direct and simple explanations (see Table~\ref{tab:mech}). In parallel to our work, other academics have produced their own taxonomies~\cite{PHP+19,MSS20}.
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = 	
 	
