--- a/latex/main.tex
+++ b/latex/main.tex
@@ -65,7 +65,8 @@ https://queue.acm.org/detail.cfm?id=3305265
 
 \textbf{Jeremy Clark} is an associate professor at the Concordia Institute for Information Systems Engineering in Montreal, Canada, where he holds the NSERC/RCGT/Catallaxy Industrial Research Chair in Blockchain Technologies. He collaborates regularly with government agencies on voting and blockchain technologies. \newline
 
-\textbf{Didem Demirag} is a PhD student at the Concordia Institute for Information Systems Engineering in Montreal. \ldots \newline
+\textbf{Didem Demirag} is a PhD student at the Concordia Institute for Information Systems Engineering in Montreal, Canada. She is interested in applied cryptography, genomic privacy, blockchain applications. She is currently working on realizing secure function evaluation using blockchain and is an intern at Autorit\'e des March\'es Financiers, Montreal.
+ \newline
 
 \textbf{Seyedehmahsa Moosavi} is a Ph.D. student at the Concordia Institute for Information Systems Engineering in Montreal, Canada. She previously worked as a research intern at the Autorité des Marchés Financiers, Québec, and now focuses on understanding the future of financial technologies (FinTech) using blockchains. \newline
 
